將主頁改版為全 vue 組合式 API 寫法
．修改資料讀取為 axios 方法
．修改商品資料及圖片顯示為 vue 邏輯
．暫時關閉'主打商品'，待日後更改
．微調 SCSS 內容 - 產品圖顯示

--- a/style/_RWD.scss
+++ b/style/_RWD.scss
@@ -1,11 +1,39 @@
-@media (max-width:992px) {
-    // Featured_Products
-    section#s02{
-        div#carousel_02{
-            div.carousel-inner{
-                div.carousel-item{
-                    overflow-x: auto;
-                    scrollbar-width: none;
+@media (min-width: 992px) and (max-width: 1199px){
+    body{
+        section#s03{
+            #showProducts{
+                div.modal{
+                    div.modal-dialog{
+                        div.modal-content{
+                            div.modal-body{
+                                div.row{
+                                    div.carousel{
+                                        div.carousel-inner{
+                                            >div{
+                                                width: 360px;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 992px)  {
+    body{
+        // Featured_Products
+        section#s02{
+            div#carousel_02{
+                div.carousel-inner{
+                    div.carousel-item{
+                        overflow-x: auto;
+                        scrollbar-width: none;
+                    }
                 }
             }
         }
