--- a/style/style.scss
+++ b/style/style.scss
@@ -32,7 +32,7 @@ p{
     height: 225px;
     background-size: contain;
     background-position: center center;
-    background-repeat: no-repeat
+    background-repeat: no-repeat;
 }
 
 body{
