--- a/style/style.scss
+++ b/style/style.scss
@@ -63,8 +63,8 @@ body{
 
         div.container-fluid{
             div.navbar-collapse{
-                ul.navbar-nav{
-                    li.dropdown{
+                div.navbar-nav{
+                    span.dropdown{
                         ul.dropdown-menu{
                             min-width: 100%;
                             li.dropdownSubmenu{
